receipts-system/main/default/objects/Receipt__c/fields/Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Status__c</fullName>
    <label>Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not To Be Sent</fullName>
            </value>
            <value>
                <fullName>In Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>