receipts-system/main/default/objects/Receipt__c/fields/Emission_Date__c.field-meta.xml
<CustomField>
    <fullName>Emission_Date__c</fullName>
    <label>Emission Date</label>
    <type>DateTime</type>
</CustomField>