receipts-system/main/default/objects/Receipt__c/fields/Encrypted_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Encrypted Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>