receipts-system/main/default/objects/Receipt__c/fields/Original_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Original_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>