receipts-system/main/default/objects/Receipt__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>