receipts-system/main/default/objects/Receipt__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <formula>SUBSTITUTE(
  LEFT( $Api.Enterprise_Server_URL_610 ,FIND(&quot;/services&quot;, $Api.Enterprise_Server_URL_610)),
  &apos;salesforce.com/&apos;,
  &apos;salesforce-sites.com/Recibos/ReceiptPDF?id=&apos; &amp; Encrypted_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL do Recibo</label>
    <type>Text</type>
</CustomField>